--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4de6a">  <td>23/08/23 15:23:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:com.tests.TestsAll@7dc3712]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@196732636</td>   <td></td> </tr>
-<tr bgcolor="b4de6a">  <td>23/08/23 15:23:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:com.tests.TestsAll@7dc3712]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@196732636</td>   <td></td> </tr>
-<tr bgcolor="b4de6a">  <td>23/08/23 15:23:48</td>   <td>36204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.TestsAll@7dc3712]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@196732636</td>   <td></td> </tr>
-<tr bgcolor="b4de6a">  <td>23/08/23 15:23:48</td>   <td>36204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.TestsAll@7dc3712]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@196732636</td>   <td></td> </tr>
-<tr bgcolor="a58f64">  <td>23/08/23 15:23:18</td>   <td>6235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestsAll.testHomePage(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.tests.TestsAll@7dc3712]">testHomePage</td> 
-  <td>main@196732636</td>   <td></td> </tr>
-<tr bgcolor="a58f64">  <td>23/08/23 15:23:18</td>   <td>6235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestsAll.testHomePage(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.tests.TestsAll@7dc3712]">testHomePage</td> 
-  <td>main@196732636</td>   <td></td> </tr>
+<tr bgcolor="b4de6a">  <td>23/08/24 15:05:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:com.tests.TestsAll@2fb0623e]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@483797427</td>   <td></td> </tr>
+<tr bgcolor="b4de6a">  <td>23/08/24 15:05:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:com.tests.TestsAll@2fb0623e]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@483797427</td>   <td></td> </tr>
+<tr bgcolor="b4de6a">  <td>23/08/24 15:05:43</td>   <td>23364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.TestsAll@2fb0623e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@483797427</td>   <td></td> </tr>
+<tr bgcolor="b4de6a">  <td>23/08/24 15:05:43</td>   <td>23364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.TestsAll@2fb0623e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@483797427</td>   <td></td> </tr>
+<tr bgcolor="95b0f5">  <td>23/08/24 15:05:24</td>   <td>3758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestsAll.testHomePage(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.tests.TestsAll@2fb0623e]">testHomePage</td> 
+  <td>main@483797427</td>   <td></td> </tr>
+<tr bgcolor="95b0f5">  <td>23/08/24 15:05:24</td>   <td>3758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestsAll.testHomePage(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.tests.TestsAll@2fb0623e]">testHomePage</td> 
+  <td>main@483797427</td>   <td></td> </tr>
 </table>
